# kafka-rust-demo

./: Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
consumer/: Cargo.toml
consumer/src/: main.rs
producer/: Cargo.toml
producer/src/: hn.rs  main.rs
